--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -1,12 +1,16 @@
+:root {
+  --primary-color: #e74a18;
+}
 body {
-  margin: 0 0 0 0;
+  margin: 0px 0px 0px 0px;
 }
 * {
   font-family: Helvetica, sans-serif;
 }
 
-h2 {
-  margin: 0 0 0 0;
+h2,
+h3 {
+  margin: 0px 0px 0px 0px;
 }
 
 ::-webkit-scrollbar {
