--- a/frontend/src/components/Select/styles.module.css
+++ b/frontend/src/components/Select/styles.module.css
@@ -1,18 +1,14 @@
-.textinput input {
+.select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
+  background-color: white;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-.textinput input::placeholder {
-  color: #999999;
-  margin-right: 10px;
-}
-
-.textinput input:focus {
+.select:focus {
   border-color: var(--primary-color);
 }
