--- a/frontend/src/components/Button/styles.module.css
+++ b/frontend/src/components/Button/styles.module.css
@@ -12,7 +12,7 @@
   margin: 0px 0px 0px 0px;
   padding-top: 0px;
   padding-bottom: 0px;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 .button:hover {
@@ -22,4 +22,30 @@
 
 .fullWidth {
   width: 100%;
+}
+
+.floating {
+  position: relative;
+  width: 60px;
+  height: 60px;
+
+  background-color: var(--primary-color);
+  color: white;
+  border-radius: 50px;
+  text-align: center;
+  border-color: white;
+  border-width: 3px;
+  box-shadow: 0 0 40px 40px white;
+  transition: 0.4s;
+}
+
+.floating i {
+  margin-left: -10px;
+  margin-right: 0px;
+  font-size: 30px;
+}
+
+.floating:hover {
+  opacity: 0.9;
+  transform: scale(1.1, 1.1);
 }
