--- a/frontend/src/components/Modal/styles.module.css
+++ b/frontend/src/components/Modal/styles.module.css
@@ -1,31 +1,40 @@
 .modal {
-  display: flex; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: flex;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content */
-.modalContent {
+.content {
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 50%;
+  border-radius: 10px;
+  animation: fadein 0.5s;
 }
-
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /* The Close Button */
 .close {
   color: #aaaaaa;
   float: right;
+  
   font-size: 28px;
   font-weight: bold;
+  transition: 0.3s;
 }
 
 .close:hover,
@@ -33,4 +42,5 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  transform: scale(1.1, 1.1);
 }
