--- a/frontend/src/components/TextArea/styles.module.css
+++ b/frontend/src/components/TextArea/styles.module.css
@@ -1,11 +1,13 @@
 .textArea {
   width: 100%;
-  height: 100px;
-  border: 1px solid black;
-  border-radius: 3px;
-  float: left;
-  padding: 0px 0px 0px 0px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
   resize: none;
+  height: 100px;
 }
 
 .textArea:focus {
