--- a/frontend/src/containers/PostsList/styles.module.css
+++ b/frontend/src/containers/PostsList/styles.module.css
@@ -1,19 +1,25 @@
+.container {
+  display: block;
+  flex-direction: column;
+  flex: 1 1 auto;
+  height: 100vh;
+  overflow-y: auto;
+  margin-top: 30px;
+  padding-right: 100px;
+  padding-left: 100px;
+}
+
 .post {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-self: center;
-  width: 800px;
   background-color: #e74a1820;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   border-radius: 10px;
   padding-left: 5px;
   padding-right: 5px;
-}
-
-@media only screen and (max-width: 800px) {
-  .feed {
-    width: 400px;
-  }
+  margin-bottom: 40px;
 }
 
 .titleContainer {
@@ -35,7 +41,7 @@
   line-height: 20px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-  flex: 1 1 70%;
+  flex: 1 1 50%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
