--- a/frontend/src/components/Button/styles.module.css
+++ b/frontend/src/components/Button/styles.module.css
@@ -25,15 +25,15 @@
 }
 
 .floating {
-  position: relative;
+  position: absolute;
   width: 60px;
   height: 60px;
+  border-radius: 50px;
 
   background-color: var(--primary-color);
   color: white;
-  border-radius: 50px;
   text-align: center;
-  border-color: white;
+
   border-width: 3px;
   box-shadow: 0 0 40px 40px white;
   transition: 0.4s;
