--- a/frontend/src/containers/CategoriesList/styles.module.css
+++ b/frontend/src/containers/CategoriesList/styles.module.css
@@ -1,19 +1,3 @@
-.verticalList {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 300px;
-  border-right: 2px double var(--primary-color);
-  height: 100vh;
-  transition: 0.5s;
-  justify-content: center;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-.verticalList:hover {
-  overflow-y: auto;
-}
-
 .item {
   cursor: pointer;
   transition: 0.4s;
@@ -53,23 +37,7 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
-  .verticalList {
-    display: flex;
-    flex-direction: row;
-    border-bottom: 2px solid var(--primary-color);
-    border-right: none;
-    flex: 0 0 20%;
-    justify-content: center;
-
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-  .verticalList:hover {
-    overflow-y: hidden;
-    overflow-x: auto;
-  }
-
+@media only screen and (max-width: 724px) {
   .item {
     cursor: pointer;
     transition: 0.4s;
@@ -77,6 +45,10 @@
     height: 90px;
     opacity: 0.6;
     border-bottom: none;
+  }
+
+  .title {
+    font-size: medium;
   }
 
   .selected {
@@ -87,5 +59,11 @@
   .addButtonPosition {
     left: 10px;
     transform: scale(0.9, 0.9);
+  }
+}
+
+@media only screen and (max-width: 324px) {
+  .title {
+    font-size: small;
   }
 }
