--- a/frontend/src/containers/FeedsPage/styles.module.css
+++ b/frontend/src/containers/FeedsPage/styles.module.css
@@ -2,9 +2,56 @@
   display: flex;
 }
 
-@media only screen and (max-width: 800px) {
+.categoriesContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 300px;
+  border-right: 2px double var(--primary-color);
+  height: 100vh;
+  transition: 0.5s;
+  justify-content: center;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.categoriesContainer:hover {
+  overflow-y: auto;
+}
+
+.postsContainer {
+  display: block;
+  flex-direction: column;
+  flex: 1 1 auto;
+  height: 100vh;
+  overflow-y: auto;
+  margin-top: 30px;
+}
+
+@media only screen and (max-width: 724px) {
   .container {
     display: flex;
     flex-direction: column;
+  }
+
+  .categoriesContainer {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid var(--primary-color);
+    border-right: none;
+    flex: 0 0 20%;
+    justify-content: center;
+
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .categoriesContainer:hover {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+
+  .postsContainer {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
