--- a/frontend/src/containers/PostsList/styles.module.css
+++ b/frontend/src/containers/PostsList/styles.module.css
@@ -100,6 +100,11 @@
   margin-left: 10px;
 }
 
+.noPosts {
+  text-align: center;
+  height: 50vh;
+}
+
 @media only screen and (max-width: 1024px) {
   .post {
     margin-left: 20px;
