--- a/frontend/src/containers/FeedsPage/styles.module.css
+++ b/frontend/src/containers/FeedsPage/styles.module.css
@@ -27,10 +27,26 @@
   margin-top: 30px;
 }
 
+.addButtonPosition {
+  top: 60px;
+  left: 365px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .addButtonPosition {
+    box-shadow: none;
+  }
+}
+
 @media only screen and (max-width: 724px) {
   .container {
     display: flex;
     flex-direction: column;
+  }
+
+  .addButtonPosition {
+    left: 10px;
+    transform: scale(0.9, 0.9);
   }
 
   .categoriesContainer {
