--- a/frontend/src/containers/FeedsPage/styles.module.css
+++ b/frontend/src/containers/FeedsPage/styles.module.css
@@ -6,22 +6,23 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 300px;
+
   border-right: 2px double var(--primary-color);
   height: 100vh;
   transition: 0.5s;
-  justify-content: center;
+
   padding-left: 50px;
   padding-right: 50px;
-}
 
-.categoriesContainer:hover {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .postsContainer {
-  display: block;
+  display: flex;
   flex-direction: column;
   flex: 1 1 auto;
+
   height: 100vh;
   overflow-y: auto;
   margin-top: 30px;
@@ -47,27 +48,29 @@
   .addButtonPosition {
     left: 10px;
     transform: scale(0.9, 0.9);
+    z-index: 2;
   }
 
   .categoriesContainer {
     display: flex;
     flex-direction: row;
+    flex: 0 0 10vh;
+
     border-bottom: 2px solid var(--primary-color);
     border-right: none;
-    flex: 0 0 20%;
-    justify-content: center;
 
     padding-left: 5px;
     padding-right: 5px;
+    overflow-y: hidden;
   }
 
   .categoriesContainer:hover {
-    overflow-y: hidden;
     overflow-x: auto;
   }
 
   .postsContainer {
     padding-left: 5px;
     padding-right: 5px;
+    height: 90vh;
   }
 }
